去除空白關鍵字

--- a/Webcrawling_Ruten.ipynb
+++ b/Webcrawling_Ruten.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyword = '水果'\n",
+    "keyword = '水果刀'\n",
     "url = 'https://find.ruten.com.tw/s/?q={}'.format(keyword) \n",
     "\n",
     "driver.get(url) #用瀏覽器開啟網頁\n",
@@ -45,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "max_page = int(soup.find('li', class_='info').text[1:])  #用find找到頁數，用index排除數字１，找到最大頁數，再用int化為數字 #決定後續翻頁次數使用\n",
     "\n",
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +109,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>關鍵字</th>\n",
+       "      <th>出現次數</th>\n",
+       "      <th>搜尋結果</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>水果刀</td>\n",
+       "      <td>7262</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=水果刀</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>刀</td>\n",
+       "      <td>5756</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=刀</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>器</td>\n",
+       "      <td>2462</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=器</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>削皮</td>\n",
+       "      <td>2367</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=削皮</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>蘋果</td>\n",
+       "      <td>2144</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=蘋果</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>多功能</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=多功能</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>菜刀</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=菜刀</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>廚房</td>\n",
+       "      <td>1911</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=廚房</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>陶瓷</td>\n",
+       "      <td>1711</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=陶瓷</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>神器</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=神器</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>刀具</td>\n",
+       "      <td>1627</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=刀具</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>家用</td>\n",
+       "      <td>1549</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=家用</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>削皮刀</td>\n",
+       "      <td>1462</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=削皮刀</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>水果</td>\n",
+       "      <td>1374</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=水果</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>不銹鋼</td>\n",
+       "      <td>1094</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=不銹鋼</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>小刀</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=小刀</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>工具</td>\n",
+       "      <td>950</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=工具</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>去皮</td>\n",
+       "      <td>925</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=去皮</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>切</td>\n",
+       "      <td>915</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=切</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>機</td>\n",
+       "      <td>914</td>\n",
+       "      <td>https://find.ruten.com.tw/s/?q=機</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    關鍵字  出現次數                                搜尋結果\n",
+       "0   水果刀  7262  https://find.ruten.com.tw/s/?q=水果刀\n",
+       "1     刀  5756    https://find.ruten.com.tw/s/?q=刀\n",
+       "2     器  2462    https://find.ruten.com.tw/s/?q=器\n",
+       "3    削皮  2367   https://find.ruten.com.tw/s/?q=削皮\n",
+       "4    蘋果  2144   https://find.ruten.com.tw/s/?q=蘋果\n",
+       "5   多功能  2006  https://find.ruten.com.tw/s/?q=多功能\n",
+       "6    菜刀  1962   https://find.ruten.com.tw/s/?q=菜刀\n",
+       "7    廚房  1911   https://find.ruten.com.tw/s/?q=廚房\n",
+       "8    陶瓷  1711   https://find.ruten.com.tw/s/?q=陶瓷\n",
+       "9    神器  1674   https://find.ruten.com.tw/s/?q=神器\n",
+       "10   刀具  1627   https://find.ruten.com.tw/s/?q=刀具\n",
+       "11   家用  1549   https://find.ruten.com.tw/s/?q=家用\n",
+       "12  削皮刀  1462  https://find.ruten.com.tw/s/?q=削皮刀\n",
+       "13   水果  1374   https://find.ruten.com.tw/s/?q=水果\n",
+       "14  不銹鋼  1094  https://find.ruten.com.tw/s/?q=不銹鋼\n",
+       "15   小刀  1022   https://find.ruten.com.tw/s/?q=小刀\n",
+       "16   工具   950   https://find.ruten.com.tw/s/?q=工具\n",
+       "17   去皮   925   https://find.ruten.com.tw/s/?q=去皮\n",
+       "18    切   915    https://find.ruten.com.tw/s/?q=切\n",
+       "19    機   914    https://find.ruten.com.tw/s/?q=機"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dic = {}\n",
     "\n",
@@ -112,6 +303,7 @@
     "        \n",
     "\n",
     "df = pd.DataFrame(list(dic.items()), columns=['關鍵字', '出現次數'])\n",
+    "df = df[df['關鍵字'] != ' '] #去除空白關鍵字\n",
     "\n",
     "df_sort = df.sort_values(by=['出現次數'], ascending = False).reset_index(drop = True)\n",
     "df_sort['搜尋結果'] = 'https://find.ruten.com.tw/s/?q='+df_sort['關鍵字'] #新增搜尋結果，方便點擊連結\n",
@@ -121,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
